globus-io (10.1-1+gt6.@distro@) @distro@; urgency=low

  * umask for test creds

 -- Globus Toolkit <support@globus.org>  Sat, 01 Feb 2014 17:04:40 -0500

globus-io (10.0-2+gt6.@distro@) @distro@; urgency=low

  * dependency

 -- Globus Toolkit <support@globus.org>  Sat, 01 Feb 2014 15:01:45 -0500

globus-io (10.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Tue, 21 Jan 2014 12:57:32 -0500

globus-io (9.5-1) unstable; urgency=low

  * GT-470: Globus IO reports timeout error as cancellation

 -- Globus Toolkit <support@globus.org>  Tue, 15 Oct 2013 00:24:30 -0500

globus-io (9.4-2) unstable; urgency=low

  * missing dependency on globus-gssapi-error

 -- Globus Toolkit <support@globus.org>  Wed, 06 Mar 2013 10:54:08 -0500

globus-io (9.4-1) unstable; urgency=low

  * GT-32: Force IPv6 in globus_io with an environment variable

 -- Globus Toolkit <support@globus.org>  Mon, 04 Feb 2013 10:33:36 -0600

globus-io (9.3-2) unstable; urgency=low

  * GT 5.2.2 final

 -- Globus Toolkit <support@globus.org>  Mon, 16 Jul 2012 15:25:43 -0400

globus-io (9.3-1) unstable; urgency=low

  * RIC-226: Some dependencies are missing in GPT metadata

 -- Globus Toolkit <support@globus.org>  Tue, 14 Feb 2012 14:44:20 -0500

globus-io (9.2-2) unstable; urgency=low

  * Update for 5.2.0 release

 -- Globus Toolkit <support@globus.org>  Mon, 05 Dec 2011 17:42:01 -0500

globus-io (9.2-1) unstable; urgency=low

  * GRAM-290: GRAM protocol misinterprets some GSSAPI errors as connection errors

 -- Globus Toolkit <support@globus.org>  Thu, 01 Dec 2011 14:42:14 -0500

globus-io (9.1-1) unstable; urgency=low

  * Remove obsolete get-orig-source rules

 -- Globus Toolkit <support@globus.org>  Wed, 23 Nov 2011 14:54:53 -0500

globus-io (9.1-0) unstable; urgency=low

  * Update to 5.1.3

 -- Globus Toolkit <support@globus.org>  Tue, 15 Nov 2011 16:26:13 -0500

globus-io (7.1-0GT5.1.1a) unstable; urgency=low
