@@ -1,3 +1,9 @@
+globus-io (10.2-1+gt6.@distro@) @distro@; urgency=low
+
+  * Packaging fixes
+
+ -- Globus Toolkit <support@globus.org>  Tue, 11 Feb 2014 14:11:28 -0500
+
 globus-io (10.1-1+gt6.@distro@) @distro@; urgency=low
 
   * umask for test creds
